<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:background="@drawable/menu_background_rounded"
    android:orientation="vertical"
    android:padding="20dp"
    tools:keep="@layout/popup_choose_image_source">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        style="@style/TextAppearance.StoryApp.TitleSmaller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/cdesc_pick_image_from"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        app:tint="?attr/colorOnPrimary"
        android:contentDescription="@string/cdesc_pick_from_camera" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        style="@style/TextAppearance.StoryApp.Body1"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

    <ImageButton
        android:id="@+id/btn_gallery"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera"
        app:tint="?attr/colorOnPrimary"
        android:contentDescription="@string/pick_from_gallery" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.StoryApp.Body1"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/btn_gallery"
        android:text="@string/gallery"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

</androidx.constraintlayout.widget.ConstraintLayout>