<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:keep="@layout/fragment_home">

        <TextView
            android:id="@+id/tv_stories"
            style="@style/TextAppearance.StoryApp.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/people_story"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitXY"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="@+id/tv_stories"
            android:contentDescription="@string/cdesc_menu_button"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_stories" />

        <ImageButton
            android:id="@+id/btn_map"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_map_button"
            android:scaleType="fitXY"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/tv_stories"
            app:layout_constraintEnd_toStartOf="@+id/btn_menu"
            app:layout_constraintTop_toTopOf="@+id/tv_stories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_story"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_stories" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_empty"
            style="@style/TextAppearance.StoryApp.TitleSmaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/no_story"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/cdesc_add_story_button"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

