<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:keep="@layout/fragment_post_story">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:contentDescription="@string/cdesc_pick_image"
        android:src="@drawable/ic_arrow_back"
        android:text="@string/post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/tv_image"
        style="@style/TextAppearance.StoryApp.TitleSmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/image"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_custom_edittext"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_image"
        app:srcCompat="@drawable/ic_place_holder" />

    <ImageButton
        android:id="@+id/btn_change_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button"
        android:contentDescription="@string/cdesc_pick_image"
        android:src="@drawable/ic_image_search"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="@+id/iv_preview"
        app:layout_constraintEnd_toEndOf="@+id/iv_preview"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/tv_caption"
        style="@style/TextAppearance.StoryApp.TitleSmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/caption"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

    <EditText
        android:id="@+id/et_caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_custom_edittext"
        android:gravity="top|start"
        android:hint="@string/write_your_caption"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLines="8"
        android:minLines="3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caption" />

    <Button
        android:id="@+id/btn_post"
        style="@style/TextAppearance.StoryApp.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_caption" />

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>