<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:keep="@layout/fragment_signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/cdesc_pick_image"
            android:src="@drawable/ic_arrow_back"
            android:text="@string/post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/img_regis"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/img_regis"
            android:contentDescription="@string/register_image"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

        <TextView
            android:id="@+id/tv_greeting"
            style="@style/TextAppearance.StoryApp.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/TextAppearance.StoryApp.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:alpha="0"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/regis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_regis" />

        <EditText
            android:id="@+id/et_name_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="name"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:alpha="0"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register" />

        <com.fdl.storyapp.ui.component.EmailEt
            android:id="@+id/et_email_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name_register" />

        <com.fdl.storyapp.ui.component.PasswordEt
            android:id="@+id/et_password_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:alpha="0"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_register" />

        <Button
            android:id="@+id/btn_register"
            style="@style/TextAppearance.StoryApp.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/regis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_register"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>